# Automatic-sentence-generator-

./: CMakeLists.txt  Readme.txt
Resource/: adjFind.c  adjFind.h  dicArbre.c  dicArbre.h  dicNettoyer.c  dicNettoyer.h  importation.c  importation.h  nodeFind.c  nodeFind.h  toSentence.c  toSentence.h  verbFind.c  verbFind.h
